<resources>
    <string name="app_name">UserPayTracker</string>
    <string name="add_visitor">Add visitor</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full name</string>
    <string name="clear">Clear</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="cash">Cash</string>
    <string name="upi">UPI</string>
    <string name="_0">0</string>
    <string name="amount_cannot_be_less_than_1">Amount cannot be less than ₹1</string>
    <string name="please_select_a_payment_method">Please select a payment method</string>
    <string name="payment_completed">Payment completed</string>
    <string name="_continue">Continue</string>

    <!-- Screen titles -->
    <string name="title_home_screen">Users</string>

    <!-- Screen labels -->
    <string name="label_home_screen">Home</string>
    <string name="label_payment_details_screen">Payment Details</string>

    <!-- Errors -->
    <string name="error_unknown">Something wrong happened. Please try again.</string>
</resources>